b=336331, fix toDataURL to be more in line with the whatwg spec, r+sr=roc